# rustopti

./: PLANS.md  create_icons.js  index.html  package-lock.json  package.json
.github/workflows/: build-release.yml  deploy.yml  gen-key.yml
.omc/state/: hud-state.json  hud-stdin-cache.json
js/: api.js  app.js  i18n.js  keybinds.js  router.js  sounds.js  terminal.js  toast.js  updater.js
pages/: account.js  activation.js  adaptive.js  cleanup.js  dashboard.js  deep-tweaks.js  game-boost.js  gamemode.js  gpu.js  network.js  process.js  rust-tweaks.js  settings.js  smartboost.js  system.js
rustopti-service/: Cargo.toml
rustopti-service/src/: main.rs
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/.omc/state/: hud-state.json  hud-stdin-cache.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: adaptive.rs  backup.rs  config.rs  core_unpark.rs  disk.rs  game_boost.rs  game_mode.rs  gpu.rs  islc.rs  licensing.rs  mod.rs  network.rs  power.rs  process.rs  ram.rs  registry.rs  rust_game.rs  service.rs  smart_boost.rs  startup.rs  system_info.rs  system_tweaks.rs  timer_tweaks.rs  visual_profile.rs
src-tauri/src/utils/: cleanup.rs  hwid.rs  license_guard.rs  mod.rs  registry_helper.rs  security.rs
styles/: animations.css  main.css
tests/: utils.test.js
