[package]
name = "rustopti-service"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "rustopti-service"
path = "src/main.rs"

[dependencies]
winreg = "0.52"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Registry",
]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
