[package]
name = "rustopti"
version = "2.2.2"
description = "Ultimate Rust Game Optimizer"
authors = ["RustOpti Team"]
edition = "2021"

[package.metadata.tauri]

[lib]
name = "rustopti_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
winreg = "0.52"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_Graphics_Gdi",
]

[profile.release]
strip = true       # Видаляє імена функцій та дебаг-інфо
opt-level = "z"    # Оптимізація за розміром (краще для приховання логіки)
lto = true         # Link Time Optimization для кращого пакування
codegen-units = 1  # Покращує якість оптимізації
panic = "abort"    # Робить неможливим зворотний стек викликів
